--- a/public/projects/projects.json
+++ b/public/projects/projects.json
@@ -1,6 +1,11 @@
 {
     "projects": [
         {
+            "name": "lesstranslation",
+            "title": "Tradução da documentação do Less css",
+            "status": "development"
+        },
+        {
             "name": "mobileprovider",
             "title": "Mobile Provider",
             "status": "development"
